--- a/src/DeviceClientQueryLibrary/DeviceClientQueryLibrary.csproj
+++ b/src/DeviceClientQueryLibrary/DeviceClientQueryLibrary.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Azure.Identity" Version="1.11.3" />
 		<PackageReference Include="Azure.ResourceManager.EventGrid" Version="1.1.0-beta.4" />
 	</ItemGroup>
 
